added folder php-cli with docker files, docker-compose.yml setting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,3 +29,9 @@ services:
       context: api/docker/development/php-fpm
     volumes:
       - ./api:/app
+
+  api-php-cli:
+    build:
+      context: api/docker/development/php-cli
+    volumes:
+      - ./api:/app
